Set z-index for home background and image to make sure text overlay was working on home feature-text in home component

--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,6 +1,8 @@
 .home {
     background-color: #2D3D2E;
     padding-top: 9rem;
+    position: relative;
+    z-index: -2;
 }
 
 .home-body-text, .home-heading-text {
@@ -68,6 +70,7 @@
     grid-column-end: 5;
     grid-row-start: 4;
     grid-row-end: 5;
+    z-index: -1;
 }
 
 .home-intro-text {
@@ -187,7 +190,6 @@
         grid-column-end: 8;
         grid-row-start: 3;
         grid-row-end: 4;
-        z-index: 2;
     }
 
     .home-intro-feature-image {
@@ -296,7 +298,6 @@
         grid-column-end: 11;
         grid-row-start: 3;
         grid-row-end: 4;
-        z-index: 2;
     }
 
     .home-intro-feature-image {
